add method to extract min and max values